# FeedMe

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py
app/api/: deps.py  routes.py  schemas.py
app/chat/: recipe_chat.py
app/ingestion/: manual.py  pipeline.py  youtube.py
app/ingredients/: normalization.py
app/matching/: ingredient_matcher.py
app/parsing/: recipe_parser.py
app/persistence/: recipe_store.py
app/ui/: streamlit_app.py
db/init/: 01-create-test-db.sql
docs/: backlog.md  roadmap.md
docs/adr/: 0001-postgres-over-nosql.md  0002-user-id-scoping-from-day-one.md  0003-fastapi-over-django.md  0004-streamlit-for-phase-0-ui.md  0005-k3s-vs-eks.md  0006-raw-source-staging-table.md  0007-llm-structured-extraction.md  0008-ingredient-normalization-alias-map.md  0009-tags-closed-vocabulary.md  0010-recipe-edit-full-replace.md  0011-chat-uses-tool-use-not-free-text-reasoning.md  template.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_raw_sources_table.py  0003_link_recipe_to_raw_source.py  0004_add_recipe_tags.py
tests/: conftest.py  test_health.py  test_models.py
tests/api/: conftest.py  test_deps.py  test_routes.py
tests/chat/: test_recipe_chat.py
tests/ingestion/: test_manual.py  test_pipeline.py  test_youtube.py
tests/ingredients/: test_normalization.py
tests/matching/: test_ingredient_matcher.py
tests/parsing/: test_recipe_parser.py
tests/persistence/: test_recipe_store.py
