[project]
name = "feedme"
version = "0.1.0"
description = "Recipe collector + ingredient-based recipe finder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "yt-dlp>=2024.8.6",
    "anthropic>=0.40",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: hits real external services (network, real API calls); run explicitly with `pytest -m integration`",
]
